--- a/src/Web/appsettings.Development.json
+++ b/src/Web/appsettings.Development.json
@@ -2,10 +2,10 @@
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Async"],
     "MinimumLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Override": {
-        "Microsoft": "Information",
-        "System": "Information"
+        "Microsoft": "Debug",
+        "System": "Debug"
       }
     },
     "WriteTo": [
